Highlight to Console

--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,31 @@
 {
     "name": "WikiWiz!",
     "version": "1.0",
-    "description": "Build an Extension!",
-    "permissions": ["tabs","activeTab", "declarativeContent", "storage"],
+    "description": "Wikipedia's Best Friend",
+    "permissions": ["tabs", "activeTab", "declarativeContent", "storage"],
     "content_scripts": [
       {
         "matches": [
           "<all_urls>"
         ],
-        "js": ["js/content.js"]
+        "js": [ "js/jquery.min.js", "js/background.js" ]
       }
     ],
-    "options_page": "options.html",
     "browser_action": {
-        "default_popup": "popup.html",
-        "default_icon": {
-            "16": "images/icon16.png",
-            "32": "images/icon32.png",
-            "48": "images/icon48.png",
-            "128": "images/icon128.png"
-          }
-      },
-      "icons": {
-        "16": "images/icon16.png",
-        "32": "images/icon32.png",
-        "48": "images/icon48.png",
-        "128": "images/icon128.png"
-      },
+      "default_popup": "popup.html",
+      "default_icon": {
+          "16": "images/icon16.png",
+          "32": "images/icon32.png",
+          "48": "images/icon48.png",
+          "128": "images/icon128.png"
+        }
+    },
+    "icons": {
+      "16": "images/icon16.png",
+      "32": "images/icon32.png",
+      "48": "images/icon48.png",
+      "128": "images/icon128.png"
+    },
+    "options_page": "options.html",
     "manifest_version": 2
   }
