--- a/manifest.json
+++ b/manifest.json
@@ -8,25 +8,24 @@
         "matches": [
           "<all_urls>"
         ],
-        "js": ["js/content.js", "js/webscrape.js"],
-        "css": ["css/styles.css"]
+        "js": [ "js/jquery.min.js", "js/background.js" ]
       }
     ],
     "browser_action": {
-        "default_popup": "popup.html",
-        "default_icon": {
-            "16": "images/icon16.png",
-            "32": "images/icon32.png",
-            "48": "images/icon48.png",
-            "128": "images/icon128.png"
-          }
-      },
-      "icons": {
-        "16": "images/icon16.png",
-        "32": "images/icon32.png",
-        "48": "images/icon48.png",
-        "128": "images/icon128.png"
-      },
-    "manifest_version": 2,
-    "web_accessible_resources": ["src/img/*"]
+      "default_popup": "popup.html",
+      "default_icon": {
+          "16": "images/icon16.png",
+          "32": "images/icon32.png",
+          "48": "images/icon48.png",
+          "128": "images/icon128.png"
+        }
+    },
+    "icons": {
+      "16": "images/icon16.png",
+      "32": "images/icon32.png",
+      "48": "images/icon48.png",
+      "128": "images/icon128.png"
+    },
+    "options_page": "options.html",
+    "manifest_version": 2
   }
