--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
         "matches": [
           "<all_urls>"
         ],
-        "js": ["js/content.js", "js/webscrape.js"],
+        "js": ["js/content.js"],
         "css": ["css/styles.css"]
       }
     ],
